<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bug tracker</string>
    <string name="title_home">My Card</string>
    <string name="title_dashboard">Reports</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Authorization</string>
    <string name="network_error_description">Check your internet connection and try again.</string>
    <string name="try_again">Try again</string>
    <string name="all_reports">All Reports</string>
    <string name="report_information">Report details</string>
    <string name="general_info">General info</string>
    <string name="addr_product">Product</string>
    <string name="addr_product_version">Product version</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="addr_hide_doc">Hide documents from public access</string>
    <string name="addr_vulnerability">Vulnerability!</string>
    <string name="addr_platforms">Platforms:</string>
    <string name="addr_ios_versions">iOS versions:</string>
    <string name="addr_android_versions">Android versions:</string>
    <string name="addr_title">New bug report</string>
    <string name="addr_devices">Devices:</string>
    <string name="title_hint">Briefly describe the bug</string>
    <string name="description_hint">Tell us more about the bug</string>
    <string name="addr_tags">Tags:</string>
    <string name="addr_severity">Severity:</string>
    <string name="additional_info">Additional info</string>
    <string name="prefs_reports">My reports</string>
    <string name="prefs_products">Products</string>
    <string name="my_bookmarks">Bookmarks</string>
    <string name="prefs_members">Members</string>
    <string name="prefs_updates">Updates</string>
    <string name="prefs_about">About</string>
    <string name="prefs_logout">Logout</string>
    <string name="loading">Loading…</string>
    <string name="logout_description">Logging out will delete all data related to this account from this device. Continue?</string>
    <string name="add_report">Add report</string>
    <string name="empty">This list is empty</string>
    <string name="error_tags">Select tags</string>
    <string name="error_platforms">Select platforms</string>
    <string name="error_title">Enter a title</string>
    <string name="error_desc">Enter a description</string>
    <string name="report_delete">Delete report</string>
    <string name="action_settings">Settings</string>
    <string name="join">Join</string>
    <string name="exit_testing">Exit testing</string>
    <string name="request_sent">Request sent</string>
    <string name="report">Report</string>
    <string name="change_theme">Change theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="show_more_info">Show more info</string>
    <string name="hide">Hide</string>
    <string name="add_comment_hint">Your comment</string>
    <string name="message">Message</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="activity">Activity</string>
    <string name="online" translatable="false">Online</string>
    <string name="last_seen_profile_f">last seen %s</string>
    <string name="last_seen_profile_m">last seen %s</string>
    <string name="date_at_1am" translatable="false">@string/date_at</string>
    <string name="date_format_day_month" translatable="false">%1$d %2$s</string>
    <string name="date_format_day_month_year" translatable="false">%1$d %2$s %3$s</string>
    <string name="date_ago_now">Just now</string>
    <string name="date_at">at</string>
    <string name="today">today</string>
    <string name="today_at">today at</string>
    <string name="tomorrow">tomorrow</string>
    <string name="yesterday">yesterday</string>
    <string name="yesterday_at">yesterday at</string>
    <string name="updating_cookies">Updating authorization data</string>
    <string name="updating_user_info">Updating account info</string>
    <string name="reproduced">Reproduced</string>
    <string name="all_products">All products</string>
    <string name="my_products">My products</string>
    <string name="yes">Yes</string>
    <string name="crash">Crash info</string>
    <string name="general_settings">General</string>
    <string name="account_settings">Account</string>
    <string name="debug_settings">Debug</string>
    <string name="debug_switch">Enable debug</string>
    <string name="restart_settings">You need to restart the application to apply changes.</string>
    <string name="versions">Versions</string>
    <string name="branches">Branches</string>
    <string name="picker_d_of_d">%1$d of %2$d</string>
    <string name="search">Search by title</string>
    <string name="others_settings">Others</string>
    <string name="debug_api" translatable="false">Логирование API</string>
    <string name="debug_web" translatable="false">Логирование Web-страниц</string>
    <string name="about_version">Version: %s</string>
</resources>
