<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="general_settings"
        android:title="@string/general_info">
        <SwitchPreference
            android:defaultValue="true"
            android:key="debug"
            android:title="@string/debug_switch" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="debug_settings"
        android:title="@string/debug_settings">
        <SwitchPreference
            android:defaultValue="false"
            android:key="dark_theme"
            android:title="@string/dark_theme" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="account_settings"
        android:title="@string/account_settings">
        <Preference
            android:key="logout"
            android:title="@string/prefs_logout" />
    </PreferenceCategory>

</PreferenceScreen>
